[package]
name = "scann-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
ndarray-linalg = "0.16.0"
csv = "1.3.0"
rand = "0.8.5"
rayon = "1.8.0"
